# delphi-press

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GLOSSARY.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/rules/: agents-llm.md  async-patterns.md  frontend-design.md  pydantic-schemas.md  testing.md
.github/workflows/: ci.yml  deploy.yml  security.yml
docs/: 00-overview.md  01-data-sources.md  02-agents-core.md  03-collectors.md  04-analysts.md  05-delphi-pipeline.md  06-generators.md  07-llm-layer.md  08-api-backend.md  09-frontend.md  10-deployment.md  11-roadmap.md  architecture.md  methodology-inverse-problem.md  prompts-catalog.md
docs-site/: mkdocs.yml
docs-site/docs/: bibliography.md  changelog.md  for-agents.md  index.md
docs/prompts/: devils-advocate.md  economist.md  geostrateg.md  judge.md  media-expert.md  mediator.md  realist.md
docs/research/: 00-summary.md  01-workflows.md  02-skills-tools.md  03-documentation.md  04-architecture.md  05-memory-config.md  imitation_learning_markets.tex  methodology.tex
nginx/: faun-security-headers.conf  moskino-security-headers.conf  nginx.conf  security-headers.conf
nginx/servers/: moskino-workshops.conf
scripts/: build_bettor_profiles.py  convert_json_to_parquet.py  deploy.sh  download_profiles.py  dry_run.py  duckdb_build_bucketed.py  duckdb_build_profiles.py  eval_forecast_vs_reality.py  eval_informed_consensus.py  eval_market_calibration.py  eval_news_correlation.py  eval_walk_forward.py  hf_build_profiles.py  refresh_profiles.sh  server-hardening.sh
src/: __init__.py  config.py  main.py  worker.py
src/agents/: CLAUDE.md  __init__.py  base.py  orchestrator.py  registry.py
src/api/: __init__.py  auth.py  dependencies.py  health.py  keys.py  outlets.py  predictions.py  router.py
src/data_sources/: __init__.py  feed_discovery.py  foresight.py  market_metrics.py  outlet_resolver.py  outlets_catalog.py  profile_cache.py  rss.py  scraper.py  web_search.py  wikidata_client.py
src/db/: __init__.py  engine.py  models.py  repositories.py  stage_persistence.py
src/eval/: __init__.py  correlation.py  ground_truth.py  metrics.py  schemas.py
src/inverse/: __init__.py  cloning.py  clustering.py  loader.py  parametric.py  profiler.py  schemas.py  signal.py  store.py
src/llm/: CLAUDE.md  __init__.py  budget.py  config.py  exceptions.py  pricing.py  providers.py  router.py
src/schemas/: __init__.py  agent.py  events.py  headline.py  llm.py  pipeline.py  prediction.py  progress.py  timeline.py
src/security/: __init__.py  csrf.py  encryption.py  jwt.py  password.py
src/utils/: __init__.py  fuzzy_match.py  retry.py  url_validator.py
src/web/: __init__.py  market_service.py  router.py
tasks/: audit_documentation_gaps.md  ci_cd_session_prompt.md  inverse_phase2_next.md  inverse_phase3_plan.md  inverse_phase4_next.md  inverse_phase4_results.md  inverse_phase5_next.md  inverse_phase6_next.md  session_frontend_redesign.md  session_next.md  todo.md
tasks/research/: architecture_docs_practices.md  distribution_metrics_methods.md  dx_awesome_claude_code.md  dx_ci_cd.md  dx_claude_code_new_features.md  dx_claude_md_best_practices.md  dx_context_management.md  dx_dependency_management.md  dx_documentation.md  dx_hooks_automation.md  dx_mcp_servers.md  dx_power_user_workflows.md  dx_python_ecosystem_2026.md  dx_recommendations_detailed.md  dx_security_ai_dev.md  dx_solo_to_team.md  dx_summary.md  dx_testing_strategies.md  foresight_centers.md  gdelt_api.md  gdelt_api_fix.md  metaculus_api_fix.md  metaculus_polymarket_api.md  news_market_correlation.md  parsing_architecture.md  polymarket_clob_api.md  polymarket_gamma_api_fix.md  polymarket_inverse_problem.md  polymarket_opensource_repos.md  (+2 more)
tests/: test_config.py
(+216 files in other folders)
